# TDDynamic

./: .gitignore  Makefile  README.html  README.md  pyproject.toml
.github/workflows/: pytest.yml
configs/: preprocessing_dssports2023.json
reference/karun/: estimate_multiple.py  estimate_single.py  pytest_estimate_multiple_avi.py  pytest_estimate_multiple_objective.py  pytest_estimate_multiple_semi_gradient.py  pytest_simulate_multiple.py  simulate_multiple.py  simulate_single.py  test_estimate_multiple_avi.py  test_estimate_multiple_objective.py  test_estimate_multiple_semi_gradient.py  test_estimate_single_avi.py  test_estimate_single_objective.py  test_estimate_single_semi_gradient.py  test_simulate_multiple.py  test_simulate_single.py
td_dynamic/: constant.py
td_dynamic/karun/: constant.py  utils.py
td_dynamic/karun/multiple/: estimate_multiple.py  predictor_multiple.py  simulate_multiple.py
td_dynamic/karun/single/: estimate_single.py  predictor_single.py  simulate_single.py
