[tool.poetry]
name = "td_dynamic"
version = "0.1.0"
description = ""
authors = ["Taiga Someya <taiga98-0809@g.ecc.u-tokyo.ac.jp>"]
packages = [{include = "td_dynamic"}]

[tool.poetry.dependencies]
python = "^3.10"
jsonlines = "^3.1.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
numpy = "^1.25.2"
torchmetrics = "^1.0.2"
seaborn = "^0.12.2"
pytorch-lightning = "^2.0.6"
ipykernel = "^6.25.1"
ipython = "^8.14.0"
lightning-lite = "^1.8.6"
pydantic = "^2.1.1"
tensorboard = "^2.13.0"
mlflow = "^2.5.0"
tqdm = "^4.65.0"
bidict = "^0.22.1"
chardet = "^5.2.0"
mplsoccer = "^1.2.1"
japanize-matplotlib = "^1.1.3"
fire = "^0.5.0"
ai2-tango = "^1.3.2"
polars = "^1.1.0"
boto3 = "^1.34.144"
lightgbm = "^4.5.0"
statsmodels = "^0.14.2"
pylint = "^3.2.7"
torch = "^2.5.1"
quantecon = "^0.7.2"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.8.0"
pytest = ">=7.0.0"
pytest-cov = "^2.12.0"
pytest-mock = "^3.8.2"
pytest-mypy = "^0.9.1"
mypy = "^0.981"
black = "^23.1.0"
tox = "^3.25.1"
ruff = "^0.0.274"
ipywidgets = "^8.1.1"
flake8 = "^6.1.0"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py310"

[[tool.pysen.lint.mypy_targets]]
  paths = ["td_dynamic", "tests"]

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
skip = [".venv", ".tox"]

[tool.black]
skip-string-normalization = true
line-length = 119
include = '\.py$'

[tool.mypy]
python_version="3.10"
files = "td_dynamic"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
show_error_codes = true
pretty = true
allow_untyped_globals = true

[tool.ruff]
line-length = 119
target-version = "py310"
# ignores
ignore = ["E501"]
exclude = [".git", ".venv", "__pycache__", "data", "dist", "misc", "notebooks", "prof", "tmp", "workspace", ".tox"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
